Moving store, done.

--- a/README
+++ b/README
@@ -1,8 +1,4 @@
-Railscasts Episode #126: Populating a Database
+Railscasts Example Store App
+--
 
-http://railscasts.com/episodes/126
-
-Commands
-
-  gem install populator
-  gem install faker
+To setup the app, just run `rake db:migrate db:populate`.
